fixed a big bug of navbar for mobile menu with z-index issue

--- a/src/Pages/Shared/Navbar/Navbar.css
+++ b/src/Pages/Shared/Navbar/Navbar.css
@@ -42,6 +42,7 @@
     top: 50%;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 1000;
 }
 
 .mini-menu-dot {
